Arreglar uso de APIs internas IntelliJ